Add hdfs+hive operations